# hermes-plugin-test

./: .gitignore  CITATION.cff  README.md  hermes.toml  pyproject.toml
.github/workflows/: ci.yml  hermes.yml  hermes_github.yml
.hermes/curate/: hermes.json
src/hermes_plugin_test/: __init__.py
test/: test_harvest.py
